# web-music-player-client

./: README.md  index.html  package-lock.json  package.json  pyproject.toml  run.bat  tsconfig.app.json  vite.config.ts
app/api/: index.ts
app/components/: MusicList.vue
app/tools/: emit.ts
client/: README.md  index.html  package-lock.json  package.json
client/src/components/: ButtonGroup.vue  LoginPage.vue  MusicItem.vue  inter.ts
client/src/router/: index.ts
doc/: api.md
server/: pyproject.toml
server/player/: __main__.py  app.py  db.py
src/: App.vue  main.ts
src/api/: index.ts
src/assets/: main.css
src/assets/less/: playlist.less  var.less
src/components/: ButtonGroup.vue  MusicItem.vue  MusicItemContent.vue  MusicList.vue  PlayerBar.vue  PlaylistEditor.vue  PlaylistItem.vue  PlaylistList.vue  PlaylistPopup.vue  consts.ts  inter.ts
src/music_player2/: app.py  db.py
src/pages/: Music.vue  MusicList.vue  PlaylistEditor.vue  PlaylistList.vue  playlist.less
src/router/: index.ts
src/store/: musicdata.ts  player.ts  state.ts
src/stores/: musicdata.ts  player.ts  playerbar.ts
src/tools/: emit.ts  index.ts  utils.ts
