[project]
name = "music-player2"
version = "0.1.0"
description = "Web-based music player 2 generation"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "mashumaro[orjson]>=3.15",
    "tinytag>=2.0.0",
    "waitress>=3.0.2",
]

[project.scripts]
music-player2 = "music_player2.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
